fix text alignment services cards & summaries

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,6 @@ a {
 .services__cards .services__card .card__header {
   display: flex;
   justify-content: space-between;
-  text-align: left;
   margin-bottom: 1.5rem;
 }
 .services__cards .services__card .card__header .lni {
@@ -680,7 +679,6 @@ main > section {
   flex-direction: column;
   align-items: center;
   padding: 100px 0;
-  text-align: center;
 }
 main > section:nth-child(odd) {
   background-color: #f2f6f7;
@@ -690,6 +688,7 @@ main > section:nth-child(odd) {
   color: #6c6c6c;
   font-size: 1.2rem;
   margin: 0 0.8rem 3rem 0.8rem;
+  text-align: center;
 }
 @media (min-width: 576px) {
   .summary {
