--- a/assets/scss/sections/_services.scss
+++ b/assets/scss/sections/_services.scss
@@ -16,7 +16,6 @@
     .card__header {
       display: flex;
       justify-content: space-between;
-      text-align: left;
       margin-bottom: 1.5rem;
 
       .lni {
